[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/screens/CreditsScreen.gd" type="Script" id=1]
[ext_resource path="res://src/themes/Theme_01_small.tres" type="Theme" id=2]
[ext_resource path="res://src/themes/Theme_01_large.tres" type="Theme" id=3]
[ext_resource path="res://src/themes/Theme_01_med.tres" type="Theme" id=4]

[node name="CreditsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.545098, 0.509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox_Credits" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenTitle" type="Label" parent="VBox_Credits"]
margin_top = 78.0
margin_right = 800.0
margin_bottom = 123.0
theme = ExtResource( 3 )
text = "Credits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OwnCon" type="Label" parent="VBox_Credits"]
margin_top = 127.0
margin_right = 800.0
margin_bottom = 159.0
theme = ExtResource( 4 )
text = "Main Contributions"
align = 1

[node name="HBox_Prog" type="HBoxContainer" parent="VBox_Credits"]
margin_top = 163.0
margin_right = 800.0
margin_bottom = 184.0
alignment = 1

[node name="Title" type="Label" parent="VBox_Credits/HBox_Prog"]
margin_left = 270.0
margin_right = 422.0
margin_bottom = 21.0
text = "Programming: "
align = 1

[node name="Name" type="Label" parent="VBox_Credits/HBox_Prog"]
margin_left = 426.0
margin_right = 529.0
margin_bottom = 21.0
text = "KapFlagon"

[node name="HBox_Music" type="HBoxContainer" parent="VBox_Credits"]
margin_top = 188.0
margin_right = 800.0
margin_bottom = 209.0
theme = ExtResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBox_Credits/HBox_Music"]
margin_left = 316.0
margin_right = 376.0
margin_bottom = 21.0
text = "Music: "

[node name="Name" type="Label" parent="VBox_Credits/HBox_Music"]
margin_left = 380.0
margin_right = 483.0
margin_bottom = 21.0
text = "KapFlagon"

[node name="HBox_Art" type="HBoxContainer" parent="VBox_Credits"]
margin_top = 213.0
margin_right = 800.0
margin_bottom = 234.0
theme = ExtResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBox_Credits/HBox_Art"]
margin_left = 325.0
margin_right = 367.0
margin_bottom = 21.0
text = "Art: "

[node name="Name" type="Label" parent="VBox_Credits/HBox_Art"]
margin_left = 371.0
margin_right = 474.0
margin_bottom = 21.0
text = "KapFlagon"

[node name="Spacer" type="Label" parent="VBox_Credits"]
margin_top = 238.0
margin_right = 800.0
margin_bottom = 259.0
align = 1

[node name="OtherCon" type="Label" parent="VBox_Credits"]
margin_top = 263.0
margin_right = 800.0
margin_bottom = 295.0
theme = ExtResource( 4 )
text = "Additional Contributions"
align = 1

[node name="HBox_trans" type="HBoxContainer" parent="VBox_Credits"]
margin_top = 299.0
margin_right = 800.0
margin_bottom = 320.0
alignment = 1

[node name="Title" type="Label" parent="VBox_Credits/HBox_trans"]
margin_left = 261.0
margin_right = 456.0
margin_bottom = 21.0
text = "French Translation:"

[node name="Name" type="Label" parent="VBox_Credits/HBox_trans"]
margin_left = 460.0
margin_right = 539.0
margin_bottom = 21.0
text = "El Momo"

[node name="HBox_testing" type="HBoxContainer" parent="VBox_Credits"]
margin_top = 324.0
margin_right = 800.0
margin_bottom = 345.0
alignment = 1

[node name="Title" type="Label" parent="VBox_Credits/HBox_testing"]
margin_left = 261.0
margin_right = 339.0
margin_bottom = 21.0
text = "Testers:"

[node name="Name" type="Label" parent="VBox_Credits/HBox_testing"]
margin_left = 343.0
margin_right = 539.0
margin_bottom = 21.0
text = "El Momo, TugOfWart"

[node name="HBox_Fonts" type="HBoxContainer" parent="VBox_Credits"]
margin_top = 349.0
margin_right = 800.0
margin_bottom = 370.0
alignment = 1

[node name="Title" type="Label" parent="VBox_Credits/HBox_Fonts"]
margin_left = 109.0
margin_right = 286.0
margin_bottom = 21.0
text = "\"Cabal Bold\" Font: "

[node name="Name" type="Label" parent="VBox_Credits/HBox_Fonts"]
margin_left = 290.0
margin_right = 690.0
margin_bottom = 21.0
text = "LJ Design Studios (used under GPL license)"

[node name="Back" type="Button" parent="VBox_Credits"]
margin_left = 372.0
margin_top = 374.0
margin_right = 427.0
margin_bottom = 401.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
text = "Back"
[connection signal="button_up" from="VBox_Credits/Back" to="." method="_on_Back_button_up"]
